# dumme_sim

./: frames_2026-07-14_00.52.26.gv  frames_2026-07-14_00.54.37.gv
dumme_controller/: setup.cfg  setup.py
dumme_controller/config/: dumme_controllers.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dumme_controller/lib/dumme_controller/: slider_control
install/dumme_controller/share/dumme_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dumme_description/share/ament_index/resource_index/parent_prefix_path/: dumme_description
install/dumme_description/share/dumme_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dumme_description/share/dumme_description/launch/: display.launch.py
install/dumme_description/share/dumme_description/meshes/: base.STL  elbow.STL  shoulder.STL  wrist.STL
install/dumme_description/share/dumme_description/rviz/: display.rviz
install/dumme_description/share/dumme_description/urdf/: dumme_description.urdf.xacro  dumme_gazebo.xacro
install/dumme_moveit/share/dumme_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dumme_moveit/share/dumme_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
install/dumme_msgs/include/dumme_msgs/dumme_msgs/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/dumme_msgs/share/ament_index/resource_index/parent_prefix_path/: dumme_msgs
install/dumme_msgs/share/dumme_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dumme_msgs/share/dumme_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  dumme_msgs__rosidl_typesupport_cppExport-noconfig.cmake  dumme_msgs__rosidl_typesupport_cppExport.cmake  dumme_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_dumme_msgs__rosidl_generator_cppExport.cmake  export_dumme_msgs__rosidl_generator_pyExport-noconfig.cmake  export_dumme_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_dumme_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_dumme_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_dumme_msgs__rosidl_typesupport_fastrtps_cppExport.cmake
install/dumme_msgs/share/dumme_msgs/rust/src/: srv.rs
install/dumme_msgs/share/dumme_msgs/rust/src/srv/: rmw.rs
install/dumme_msgs/share/dumme_msgs/srv/: EulerToQuaternion.idl
install/dumme_utils/lib/dumme_utils/: angle_conversion
install/dumme_utils/share/dumme_utils/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dumme_utils/share/dumme_utils/cmake/: dumme_utilsConfig.cmake
log/: latest_build
src/dumme_controller/: package.xml  setup.py
src/dumme_controller/launch/: controller.launch.py  slider_controller.launch.py
src/dumme_description/: CMakeLists.txt
src/dumme_description/launch/: gazebo.launch.py
src/dumme_description/meshes/: shoulder_rotation_plate.STL
src/dumme_description/urdf/: dumme_description.urdf.xacro  dumme_ros2_control.xacro
src/dumme_moveit/: CMakeLists.txt  package.xml
src/dumme_moveit/config/: dumme.srdf  planning_python_api.yaml
src/dumme_moveit/launch/: moveit.launch.py
src/dumme_msgs/: CMakeLists.txt
src/dumme_utils/: CMakeLists.txt
src/dumme_utils/dumme_utils/: angle_conversion.py
src/dumme_utils/src/: angle_conversion.cpp
(+20 files in other folders)
