<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>dumme_controller</name>
  <version>0.0.1</version>

  <description>
    Controller package for the Dumm-E robotic arm.
  </description>

  <maintainer email="sambhava06@gmail.com">asambhav</maintainer>

  <license>MIT</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Launch -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>

  <!-- Utilities -->
  <depend>xacro</depend>
  <depend>yaml_cpp_vendor</depend>

  <!-- Runtime companions -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>dumme_description</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>